--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    h1 {
+        @apply font-bold text-4xl lg:text-5xl;
+    }
+}
 @layer components {
     .my-container {
         @apply container mx-auto px-6;
