Private Route Added, Img Update & Sent Email To Server

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,8 @@
         @apply flex items-center before:flex-1 before:border before:border-base-content/50  after:flex-1 after:border after:border-base-content/50;
     }
     /* Input Field */
-    .input {
+    .input,
+    .file-input {
         @apply focus:outline-none;
     }
     .input-field {
