--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
     h1 {
         @apply font-bold text-4xl lg:text-5xl;
     }
+    h2 {
+        @apply font-bold text-3xl lg:text-4xl;
+    }
 }
 @layer components {
     .my-container {
