--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
     h1 {
-        @apply font-bold text-4xl lg:text-5xl;
+        @apply font-bold text-4xl leading-[44px] lg:text-[40px] lg:leading-[48px];
     }
     h2 {
         @apply font-bold text-3xl lg:text-4xl;
